# VICE

./: .gitignore  .setup.cfg.swp  Makefile  NOTES.md  pyproject.toml  setup.cfg  setup.py
.eggs/Cython-0.29.34-py3.11-linux-x86_64.egg/EGG-INFO/: RECORD
.github/workflows/: ci.yml
carbon/: cl_run.py  multizone_sim.py  run.py  submit.sh
carbon/src/: _globals.py  multizone_sim.py
docs/src/: cover.tex  index.rst
src/vice/: __init__.py
src/vice/milkyway/: milkyway.py
src/vice/src/: utils.h
src/vice/src/tests/: _utils.pxd
src/vice/toolkit/rand_walk/: __init__.py  _rand_walk_stars.pyx
vice/: __init__.py  readme.txt
vice/_build_utils/: c_extensions.py
vice/core/: callback.py
vice/core/dataframe/: _agb_yield_settings.pyx
vice/core/multizone/: _multizone.pyx
vice/core/singlezone/: _singlezone.pyx
vice/milkyway/: milkyway.py
vice/src/: utils.c  utils.h
vice/src/io/: progressbar.c
vice/src/tests/: _utils.pxd  _utils.pyx  utils.c  utils.h
vice/toolkit/: __init__.py
vice/toolkit/analytic_migration/: Makefile  __init__.py  _analytic_migration_2d.c  _analytic_migration_2d.pyx  _gaussian_stars.pyx.bak  _migration_models.pyx  _migration_utils.pxd  _migration_utils.pyx  analytic_migration_2d.py  migration_models.py
vice/toolkit/analytic_migration/tests/: Makefile  __init__.py  analytic_migration_2d.py  migration_utils.py
vice/toolkit/gaussian/: Makefile  __init__.py  _gaussian_stars.c  _gaussian_stars.pyx  gaussian_stars.py
vice/toolkit/gaussian_stars/: Makefile  __init__.py  _gaussian_stars.c  _gaussian_stars.pxd  _gaussian_stars.pyx  gaussian_stars.py
vice/toolkit/rand_walk/: Makefile  __init__.py  _gaussian_stars.c  _rand_walk_stars.c  _rand_walk_stars.pxd  _rand_walk_stars.pyx  rand_walk_stars.py
vice/toolkit/rand_walk/tests/: Makefile  __init__.py  rand_walk_stars.py
vice/yields/agb/: __init__.py  _grid_reader.pyx  interpolator.py  settings.py
vice/yields/agb/pignatari16/: Makefile  __init__.py
vice/yields/agb/pignatari16/raw/: B19.txt  B19.txt_2  gn93.txt  notes.md  process.py  process_safe.py
vice/yields/agb/tests/: imports.py  lookup.py
