[build-system]
requires = ["setuptools >= 61.0.0", "cython >=0.29.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "vice"
# dynamic = ["version"]
version = "1.4.1.dev0"

description = "Galactic Chemical Evolution Integrator"
license = {text = "MIT"}

requires-python = ">=3.7, <4"

keywords = ["galaxies", "simulations", "abundances"]


authors = [
    {name = "James W. Johnson", email="giganano9@gmail.com"}
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]


[project.urls]
Repository = "https://github.com/giganano/VICE.git"
Documentation = "https://vice-astro.readthedocs.io/"
"Bug Tracker" = "https://github.com/giganano/VICE/issues"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
